/*
 *    Copyright (c) 2019, Needham Software LLC
 *
 *    Licensed under the Apache License, Version 2.0 (the "License");
 *    you may not use this file except in compliance with the License.
 *    You may obtain a copy of the License at
 *
 *        http://www.apache.org/licenses/LICENSE-2.0
 *
 *    Unless required by applicable law or agreed to in writing, software
 *    distributed under the License is distributed on an "AS IS" BASIS,
 *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *    See the License for the specific language governing permissions and
 *    limitations under the License.
 */

plugins {
    id 'java'
    id 'war'
}

group 'com.needhamsoftware'
version '1.0-SNAPSHOT'

sourceCompatibility = 1.11

repositories {
    mavenCentral()
}

dependencies {
    compile project(':core')

    providedCompile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
    providedCompile 'javax.servlet.jsp:jsp-api:2.1'
    providedCompile 'javax:javaee-api:7.0'

    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.9'
    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '2.4.2'

    compile 'com.google.inject.extensions:guice-multibindings:4.0'
    compile 'org.apache.shiro:shiro-web:1.4.2'
    compile 'org.apache.shiro:shiro-guice:1.4.2'

    compile 'com.google.inject.extensions:guice-servlet:4.0'
    compile 'com.google.inject:guice:4.0'
    compile 'com.google.inject.extensions:guice-persist:4.0'

    testCompile group: 'junit', name: 'junit', version: '4.12'
}

war {
    setArchiveFileName 'rest.war'
}